Revert "fix: add overflow visible to navbar buttons so divider pseudo-elements are not clipped"
This reverts commit 24dfd29be3c8cb1219feba2c83fbb5225b411baa.

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -72,7 +72,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    overflow: visible;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.8);
